--- a/popup.html
+++ b/popup.html
@@ -1,12 +1,9 @@
-<!doctype html>
-<html>
- <head>
- <title>First example</title>
- <script src="popup.js"></script>
- </head>
- <body>
- <input type="text" id="name" value="Hello hello!">
- <hr/>
- <button id='button'>Click me!</button>
- </body>
+<!DOCTYPE html>
+<html style=''>
+<head>
+<script src='popup.js'></script>
+</head>
+<body style="width:400px;">
+<div id='message'>Injecting Script....</div>
+</body>
 </html>
